--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "bulma": "^0.9.2",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "gsap": "^3.6.0",
     "three": "^0.126.1",
     "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0"
+    "vue-class-component": "^8.0.0-0",
+    "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
