--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .DS_Store
 node_modules
 
-
 # local env files
 .env.local
 .env.*.local
@@ -20,3 +19,7 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+.nuxt
+.output
+dist
