--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "introduction",
   "private": true,
   "scripts": {
     "build": "nuxt build",
@@ -30,5 +30,10 @@
     "stylelint-config-standard-vue": "^1.0.0",
     "typescript": "^5.1.6",
     "vue-tsc": "^1.8.4"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/kyoko-nr/introduction.git",
+  "author": "kyoko-nr <kyokokitagawa@me.com>",
+  "license": "MIT"
 }
