--- a/package.json
+++ b/package.json
@@ -15,25 +15,29 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/eslint-module": "^4.1.0",
-    "@nuxtjs/stylelint-module": "^5.1.0",
-    "@types/node": "^18",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "nuxt": "^3.6.2",
-    "postcss-html": "^1.5.0",
-    "prettier": "^3.0.0",
-    "stylelint": "^15.10.1",
-    "stylelint-config-recess-order": "^4.2.0",
-    "stylelint-config-standard-scss": "^10.0.0",
-    "stylelint-config-standard-vue": "^1.0.0",
-    "typescript": "^5.1.6",
-    "vue-tsc": "^1.8.4"
+    "@nuxtjs/eslint-config-typescript": "12.0.0",
+    "@nuxtjs/eslint-module": "4.1.0",
+    "@nuxtjs/stylelint-module": "5.1.0",
+    "@types/node": "18",
+    "eslint": "8.44.0",
+    "eslint-config-prettier": "8.8.0",
+    "nuxt": "3.6.2",
+    "postcss-html": "1.5.0",
+    "prettier": "3.0.0",
+    "sass": "1.63.6",
+    "stylelint": "15.10.1",
+    "stylelint-config-recess-order": "4.2.0",
+    "stylelint-config-standard-scss": "10.0.0",
+    "stylelint-config-standard-vue": "1.0.0",
+    "typescript": "5.1.6",
+    "vue-tsc": "1.8.4"
   },
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/kyoko-nr/introduction.git",
   "author": "kyoko-nr <kyokokitagawa@me.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "three": "0.154.0"
+  }
 }
