fix clock animation

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "author": "kyoko-nr <kyokokitagawa@me.com>",
   "license": "MIT",
   "dependencies": {
+    "gsap": "3.12.2",
     "three": "0.154.0"
   }
 }
